tests/except/raise2.out
Start
TypeError:
  At raise2.py, line 5, in main()
  At raise2.py, line 8, in __init__()
