tests/except/raise2.py
class X:
    pass

def main():
    raise X

print "Start"
main()
print "End"
